testdata/baselines/reference/submodule/compiler/argumentsReferenceInConstructor2_Js.errors.txt
/a.js(5,13): error TS8010: Type annotations can only be used in TypeScript files.


==== /a.js (1 errors) ====
    class A {
    	/**
    	 * Constructor
    	 *
    	 * @param {object} [foo={}]
    	           ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    	 */
    	constructor(foo = {}) {
    		/**
    		 * @type object
    		 */
    		this["arguments"] = foo;
    	}
    }
    